<resources>
    <string name="app_name">EyeHelp</string>
    <string name="color">Color:</string>
    <string name="colorNameRed">Red</string>
    <string name="colorNameOrange">Orange</string>
    <string name="colorNameYellow">Yellow</string>
    <string name="colorNameYellowGreen">Yellow Green</string>
    <string name="colorNameGreen">Green</string>
    <string name="colorNameGreenCyan">Green Cyan</string>
    <string name="colorNameCyan">Cyan</string>
    <string name="colorNameBlueCyan">Blue Cyan</string>
    <string name="colorNameBlue">Blue</string>
    <string name="colorNameViolet">Violet</string>
    <string name="colorNameMagenta">Magenta</string>
    <string name="colorNameRose">Rose</string>
    <string name="colorPrefixNameGreyish">greyish</string>
    <string name="colorNameGrey">Grey</string>
    <string name="colorPrefixNameDark">dark</string>
    <string name="colorNameWhite">White</string>
    <string name="colorPrefixNameLight">light</string>
    <string name="colorNameBlack">Black</string>
    <string name="colorPrefixNameVeryLight">very light</string>
    <string name="colorNameBrown">Brown</string>
    <string name="Start_btn">Start</string>
    <string name="Instructions_btn">Instructions</string>
    <string name="Next_btn">Next</string>
    <string name="Results_btn">Results</string>
    <string name="Restart_btn">Restart</string>
    <string name="Home_btn">Home</string>
    <string name="instr1">The Ishihara Test is used to assess the existence of color blindness. In other words, to evaluate if there is a color blindness disorder that affects color vision (such as green and red).</string>
    <string name="instr2">Color blindness is a vision dysfunction characterized by impaired color perception, which can range from confusion between certain shades of green and red, to no color distinction.</string>
    <string name="instr3">The Ishihara Test evaluates the congenital alteration of color vision, that is, color blindness. Most of these alterations are reduced to red-green deficiency.</string>
    <string name="instr4">- Try to make the lighting as similar as possible to natural light and avoid as many reflections as possible.</string>
    <string name="instr5">- Stand 75 cm from the screen.</string>
    <string name="instr6">- The test is performed monocularly.</string>
    <string name="instr7">- You must hit the numbers in less than 3 seconds.</string>
    <string name="Good">Congratulations! You have no color blindness problems</string>
    <string name="Medium">You may have a slight color vision deficiency. Ask an ophthalmologist</string>
    <string name="Bad">You may have a color vision deficiency. Perhaps you should see an ophthalmologist</string>
    <string name="red_switch">Red</string>
    <string name="default_switch">Default</string>
    <string name="image_content_description">Image</string>
    <string name="palm_tree_content_description">Palm Tree</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="save_filter">Save Filter</string>
    <string name="default_filters">Default Filters</string>
    <string name="custom_filters">Custom Filters</string>
    <string name="custom_switch1">Purple</string>
    <string name="custom_switch2">Teal</string>
    <string name="select_image">Select Image</string>
    <string name="image1">Palm Tree</string>
    <string name="image2">Mountains</string>
    <string name="apply_image">Apply Image</string>
    <string name="rgb_sliders">RGB Sliders</string>
    <string name="red_slider">R</string>
    <string name="green_slider">G</string>
    <string name="blue_slider">B</string>
    <string name="mountains_select">Mountains</string>
    <string name="palm_tree_select">Palm Tree</string>
    <string name="color_filter">Color Filter</string>
    <string name="default_button">Default</string>
    <string name="red_button">Red</string>
    <string name="green_button">Green</string>
    <string name="blue_button">Blue</string>
    <string name="custom_button">Custom</string>
    <string name="revert">Revert</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyDqH3nPaC0hbgyc4pGuRFK_UKGOSgR01sc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="title_activity_maps2">MapsActivity2</string>


</resources>